Fix contact links treatment of whitespace

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,6 +186,7 @@ a:hover, a:focus {
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 0.5rem;
   transition: background-color 0.54365s;
+  font-size: 0
 }
 
 @supports (backdrop-filter: none) or (-webkit-backdrop-filter: none) {
@@ -197,9 +198,9 @@ a:hover, a:focus {
 }
 
 .contact-links a {
-  margin: 0 0.125rem;
-  padding: 0 0.25rem;
+  padding: 0 0.4rem;
   color: #000;
+  font-size: 1rem;
 }
 
 .contact-links:hover {
